# Langview

./: LICENSE  README.md  langview.py  pyproject.toml
langview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
